fix: remove scrollbar of the navbar

--- a/front/src/components/common/NavigationBar.css
+++ b/front/src/components/common/NavigationBar.css
@@ -2,7 +2,7 @@
     padding: 10px 20px;
     display: flex;
     box-sizing: border-box;
-    overflow: scroll;
+    overflow: hidden;
     justify-content: space-between;
     align-items: center;
     color: #fff;
